--- a/lights.css
+++ b/lights.css
@@ -22,8 +22,8 @@ html, body {
 
 #root-table-scroll {
     #height:150px;
-    font-size:1.05rem;
-    width:44rem;
+    font-size:1rem;
+    width:45rem;
     height:480px;
     overflow:scroll;  
     margin-top:2px;
@@ -38,6 +38,12 @@ html, body {
 }
 
 .main select {
+    color: #111;
+    background-color: #eee;
+}
+ 
+.main select#allroots {
+    font-size:.75rem;
     color: #111;
     background-color: #eee;
 }
