--- a/lights.css
+++ b/lights.css
@@ -29,7 +29,7 @@ html, body {
 #root-table-scroll {
     #height:150px;
     font-size:1rem;
-    width:40rem;
+    width:45rem;
     height:450px;
     overflow:scroll;  
     margin-top:2px;
@@ -47,9 +47,9 @@ html, body {
 .main textarea {
     color: #111;
     background-color: #eee;
-    font-size:1rem;
-    width:45rem;
-    #height:540px;
+    font-size:.65rem;
+    width:20rem;
+    # height:540px;
 }
 
 .main select {
