parse engl meaning

--- a/lights.css
+++ b/lights.css
@@ -162,7 +162,7 @@ input#lightswitch {
   display: none;
 }
 
-[data-sync-state=syncing] #sync-success {
+[data-sync-state=syncing-data] #sync-success {
   display: block;
 }
 
